<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="comicsDetailViewModel"
            type="com.xiaowugui.e_scimoc.viewModel.ComicsDetailViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    app:imageUrl="@{comicsDetailViewModel.selectedComics.thumbnail}"
                    android:layout_weight="1"/>


                <GridLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:columnCount="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@{comicsDetailViewModel.selectedComics.title}"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_columnSpan="2"
                        android:layout_row="0"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:text="@string/display_sale_date"
                        style="@style/textview_label_right" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:paddingBottom="2dp"
                        android:text="@{comicsDetailViewModel.displaySaleDate}" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:text="@string/display_format"
                        style="@style/textview_label_right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:text="@{comicsDetailViewModel.displayFormat}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:text="@string/display_page_count"
                        style="@style/textview_label_right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:text="@{comicsDetailViewModel.displayPageCount}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="4"
                        android:layout_column="0"
                        android:text="@string/display_isbn"
                        style="@style/textview_label_right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="4"
                        android:layout_column="1"
                        android:text="@{comicsDetailViewModel.displayISBN}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="5"
                        android:layout_column="0"
                        android:text="@string/display_price"
                        style="@style/textview_label_right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="5"
                        android:layout_column="1"
                        android:text="@{comicsDetailViewModel.displayPrice}" />
                </GridLayout>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_description"
                style="@style/textview_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{comicsDetailViewModel.displayDescription}"
                style="@style/textview_value" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_series"
                style="@style/textview_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{comicsDetailViewModel.displaySeries}"
                style="@style/textview_value" />

        </LinearLayout>

    </ScrollView>
</layout>
